fix handsup endpoint, remove allowed hosts

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://quiz-game-v2-9046345b6d4d.herokuapp.com/
-ALLOWED_HOSTS=all
+REACT_APP_API_URL=https://shrouded-river-15106-69fad24cfbc6.herokuapp.com
+
